update added, small refactors